# routes/user.js
@@ -13,6 +13,7 @@ router.post(
   "/login",
   asyncHandler(async (req, res) => {
     const { email, password } = req.body;
+    console.log(email, password, req.body);
     const user = await User.findOne({ email });
     console.log(user);
     if (user && (await user.matchPassword(password))) {
